--- a/articles/active-directory-domain-services/index.yml
+++ b/articles/active-directory-domain-services/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: iainfou
   manager: daveba
   ms.date: 08/01/2019
-  ms.openlocfilehash: f5fa27e19da6bb64b7e214ec32cbfbf0a417118e
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 72fda19e35792e25ba31de2c3d7d4882e9d0e0ef
+  ms.sourcegitcommit: 11e2521679415f05d3d2c4c49858940677c57900
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "70010558"
+  ms.lasthandoff: 07/31/2020
+  ms.locfileid: "87480367"
 landingContent:
 - title: 关于 Azure AD 域服务
   linkLists:
@@ -32,7 +32,7 @@ landingContent:
     links:
     - text: 同步是如何工作的？
       url: synchronization.md
-    - text: 常见问题解答
+    - text: 常见问题
       url: faqs.md
 - title: 入门
   linkLists:
@@ -74,7 +74,7 @@ landingContent:
       url: check-health.md
     - text: 配置电子邮件通知
       url: notifications.md
-    - text: 启用安全审核（预览版）
+    - text: 启用安全审核
       url: security-audit-events.md
 - title: 将 VM 加入域
   linkLists:
@@ -88,7 +88,7 @@ landingContent:
       url: join-ubuntu-linux-vm.md
     - text: Red Hat Enterprise Linux
       url: join-rhel-linux-vm.md
-- title: 故障排除
+- title: 疑难解答
   linkLists:
   - linkListType: how-to-guide
     links:
