--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -210,8 +210,10 @@
     - name: 模板规格
       items:
         - name: 使用关联的模板进行创建
+          displayName: template specs
           href: template-specs-create-linked.md
         - name: 部署关联的模板
+          displayName: template specs
           href: template-specs-deploy-linked-template.md
     - name: 高级模板
       items:
@@ -366,8 +368,8 @@
           href: deploy-to-management-group.md
         - name: 租户
           href: deploy-to-tenant.md
-        - name: 跨资源组
-          href: cross-resource-group-deployment.md
+        - name: 跨范围部署
+          href: cross-scope-deployment.md
     - name: 提供参数
       items:
         - name: 创建参数文件
