--- a/articles/data-lake-analytics/index.yml
+++ b/articles/data-lake-analytics/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: hrasheed-msft
   ms.author: hrasheed
   ms.date: 09/13/2019
-  ms.openlocfilehash: ed785cb383381902e488acbe182446eaa977824a
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 5dadcad164a309a7251a1e4627cf1e78f6e927d4
+  ms.sourcegitcommit: 5f7b75e32222fe20ac68a053d141a0adbd16b347
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "73825801"
+  ms.lasthandoff: 07/31/2020
+  ms.locfileid: "87475713"
 landingContent:
 - title: 关于 Data Lake Analytics
   linkLists:
@@ -24,6 +24,8 @@ landingContent:
     links:
     - text: 什么是 Azure Data Lake Analytics？
       url: data-lake-analytics-overview.md
+    - text: Data Lake Analytics 中的新增功能
+      url: data-lake-analytics-whats-new.md
   - linkListType: quickstart
     links:
     - text: 在 Azure 门户中创建 U-SQL 作业
