--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -452,6 +452,8 @@
       displayName: security
     - name: 用户流版本
       href: user-flow-versions.md
+    - name: 旧版用户流
+      href: user-flow-versions-legacy.md
 - name: 资源
   items:
     - name: Azure 路线图
