--- a/articles/active-directory/users-groups-roles/index.yml
+++ b/articles/active-directory/users-groups-roles/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.date: 11/08/2019
   author: curtand
   ms.author: curtand
-  ms.openlocfilehash: 242bbfa3143827162b087e231d99b6de451d4908
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: 716551f4b298a9a7be2425fdd4cd8246afb5a924
+  ms.sourcegitcommit: 11e2521679415f05d3d2c4c49858940677c57900
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "78272986"
+  ms.lasthandoff: 07/31/2020
+  ms.locfileid: "87503457"
 landingContent:
 - title: 关于用户、组、角色和许可证
   linkLists:
@@ -31,7 +31,7 @@ landingContent:
     links:
     - text: 委托管理权限
       url: roles-concept-delegation.md
-    - text: 比较 Azure RBAC 角色与 Azure AD 管理员角色
+    - text: 比较 Azure 角色与 Azure AD 管理员角色
       url: https://docs.microsoft.com/azure/role-based-access-control/rbac-and-directory-admin-roles?context=azure/active-directory/users-groups-roles/context/ugr-context
 - title: 入门
   linkLists:
