--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -244,43 +244,49 @@
     - name: 更新管理
       items:
         - name: 概述
-          href: automation-update-management.md
+          href: update-management/update-mgmt-overview.md
         - name: 链接的 Log Analytics 工作区支持的区域
           href: how-to/region-mappings.md
         - name: 启用
           items:
             - name: 使用 Azure 资源管理器模板启用“更新管理”
-              href: automation-update-management-deploy-template.md
+              href: update-management/update-mgmt-enable-template.md
             - name: 从 Azure 门户启用“更新管理”
-              href: automation-onboard-solutions-from-browse.md
+              href: update-management/update-mgmt-enable-portal.md
             - name: 从 Azure VM 启用“更新管理”
-              href: automation-onboard-solutions-from-vm.md
+              href: update-management/update-mgmt-enable-vm.md
             - name: 从自动化帐户启用更新管理
-              href: automation-onboard-solutions-from-automation-account.md
+              href: update-management/update-mgmt-enable-automation-account.md
             - name: 从 runbook 启用“更新管理”
-              href: automation-onboard-solutions.md
-        - name: 管理 Azure VM 的更新
-          href: automation-tutorial-update-management.md
-        - name: 管理多个 VM 的更新
-          href: manage-update-multi.md
-        - name: 查看更新评估
-          href: automation-view-update-assessments.md
-        - name: 管理前脚本和后脚本
-          href: pre-post-scripts.md
+              href: update-management/update-mgmt-enable-runbook.md
+        - name: 管理 VM 的更新
+          items:
+            - name: 入门
+              href: update-management/update-mgmt-manage-updates-for-vm.md
+            - name: 评估符合性
+              href: update-management/update-mgmt-view-update-assessments.md
+            - name: 部署更新并检查状态
+              href: update-management/update-mgmt-deploy-updates.md
+            - name: 使用前脚本和后脚本
+              href: update-management/update-mgmt-pre-post-scripts.md
+            - name: 配置警报
+              href: update-management/update-mgmt-configure-alerts.md
         - name: 与 Configuration Manager 集成
-          href: updatemgmt-mecmintegration.md
+          href: update-management/update-mgmt-mecmintegration.md
         - name: 配置 Windows 更新客户端
-          href: automation-configure-windows-update.md
+          href: update-management/update-mgmt-configure-wuagent.md
         - name: 使用动态组
-          href: automation-update-management-groups.md
+          href: update-management/update-mgmt-groups.md
         - name: 查询更新管理日志
-          href: automation-update-management-query-logs.md
+          href: update-management/update-mgmt-query-logs.md
         - name: 使用作用域配置
-          href: automation-scope-configurations-update-management.md
-        - name: 取消工作区与自动化帐户的链接
-          href: automation-unlink-workspace-update-management.md
-        - name: 从“更新管理”中删除 VM
-          href: automation-remove-vms-from-update-management.md
+          href: update-management/update-mgmt-scope-configuration.md
+        - name: 禁用
+          items:
+            - name: 删除更新管理
+              href: update-management/update-mgmt-remove-feature.md
+            - name: 从“更新管理”中删除 VM
+              href: update-management/update-mgmt-remove-vms.md
         - name: 疑难解答
           items:
             - name: 排查功能部署问题
