--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -46,18 +46,24 @@
       href: manage-dhcp.md
     - name: 灾难恢复
       href: disaster-recovery.md
-    - name: 用于 AVS 的 Azure 备份服务器
-      items:
-        - name: 设置用于 AVS 的 Azure 备份服务器
-          href: set-up-mabs-for-avs.md
-        - name: 使用 Azure 备份服务器备份 AVS VM
-          href: backup-avs-vms-with-mabs.md
     - name: Azure 本机集成
       items:
         - name: API 管理
           href: concepts-api-management.md
         - name: 中心和分支
           href: concepts-avs-hub-and-spoke-integration.md
+        - name: 用于 AVS 的 Azure 备份服务器
+          items:
+            - name: 设置用于 AVS 的备份服务器
+              href: set-up-mabs-for-avs.md
+            - name: 使用备份服务器来备份 AVS VM
+              href: backup-avs-vms-with-mabs.md
+        - name: AVS 上的应用程序网关
+          href: protect-avs-web-apps-with-app-gateway.md
+    - name: VMware 解决方案
+      items:
+        - name: 设置 vRealize Operations for AVS
+          href: vrealize-operations-for-avs.md
 - name: 参考
   items: null
 - name: 资源
