--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -232,10 +232,12 @@
           href: devtest-lab-mandatory-artifacts.md
         - name: 排查有关应用项目的问题
           href: devtest-lab-troubleshoot-apply-artifacts.md
-    - name: 加密实验室使用的存储空间和操作系统磁盘
+    - name: 加密实验室资源
       items:
         - name: 加密实验室使用的存储空间
           href: encrypt-storage.md
+        - name: 使用客户管理的密钥加密 OS 磁盘
+          href: encrypt-disks-customer-managed-keys.md
     - name: 与 CI/CD 集成
       items:
         - name: 将实验室集成到 Azure Pipelines CI/CD 管道中
