--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -40,12 +40,14 @@
       items:
         - name: 使用 Azure 数字孪生 CLI
           href: how-to-use-cli.md
-        - name: 设置实例和身份验证（已编写脚本）
-          href: how-to-set-up-instance-scripted.md
-        - name: 设置实例和身份验证 (CLI)
-          href: how-to-set-up-instance-cli.md
-        - name: 设置实例和身份验证（门户）
-          href: how-to-set-up-instance-portal.md
+        - name: 设置实例和身份验证
+          items:
+            - name: 脚本版本
+              href: how-to-set-up-instance-scripted.md
+            - name: CLI 版本
+              href: how-to-set-up-instance-cli.md
+            - name: 门户版本
+              href: how-to-set-up-instance-portal.md
         - name: 编写应用身份验证码
           href: how-to-authenticate-client.md
     - name: 设计模型
