--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -13,23 +13,23 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 629616c00ffbc53500392c12155c077722cc310d
-  ms.sourcegitcommit: 124f7f699b6a43314e63af0101cd788db995d1cb
+  ms.openlocfilehash: daccc4195877ad18441640f562556d97a04b10f0
+  ms.sourcegitcommit: 5b8fb60a5ded05c5b7281094d18cf8ae15cb1d55
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86078589"
+  ms.lasthandoff: 07/29/2020
+  ms.locfileid: "87386480"
 highlightedContent:
   items:
   - title: Azure Key Vault 简介
     itemType: overview
     url: ./general/overview.md
+  - title: 对软删除的重要更改
+    itemType: overview
+    url: ./general/soft-delete-change.md
   - title: 身份验证
     itemType: overview
     url: ./general/authentication.md
-  - title: 软删除
-    itemType: overview
-    url: ./general/overview-soft-delete.md
   - title: 基本概念
     itemType: overview
     url: ./general/basic-concepts.md
@@ -58,7 +58,7 @@ conceptualContent:
     footerLink:
       url: ./certificates/index.yml
       text: 查看详细信息
-  - title: 键
+  - title: 密钥
     links:
     - url: ./keys/about-keys.md
       itemType: overview
@@ -88,7 +88,7 @@ conceptualContent:
       text: 为单用户资源轮换机密
     footerLink:
       url: ./secrets/index.yml
-      text: 查看详细信息
+      text: 查看更多
   - title: 将 Key Vault 与存储配合使用
     links:
     - url: ./secrets/overview-storage-keys.md
