--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -38,6 +38,8 @@
       href: /azure/jenkins/tutorial-jenkins-deploy-cli-spring-cloud-service
     - name: 使用托管标识将 Key Vault 连接到 Azure Spring Cloud 应用
       href: spring-cloud-tutorial-managed-identities-key-vault.md
+    - name: 为微服务应用程序设置自动缩放功能
+      href: spring-cloud-tutorial-setup-autoscale.md
 - name: 示例
   items:
     - name: Azure Policy 内置策略定义
