--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -237,21 +237,41 @@
       href: ../../../site-recovery/site-recovery-workload.md#protect-sap
     - name: 用于最大程度地降低 SAP 应用程序网络延迟的 Azure 邻近放置组
       href: sap-proximity-placement-scenarios.md
-- name: AAD SAP 标识集成和单一登录
+- name: 将 Azure AD 与 SAP 应用程序集成
   items:
-    - name: 与 SAP 云集成
-      href: ../../../active-directory/saas-apps/sap-customer-cloud-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: AAD 与 SAP Cloud Platform Identity Authentication 集成
+    - name: 将用户从 SAP SuccessFactors 预配到 Active Directory
+      href: ../../../active-directory/saas-apps/sap-successfactors-inbound-provisioning-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 将用户从 SAP SuccessFactors 预配到 Azure AD
+      href: ../../../active-directory/saas-apps/sap-successfactors-inbound-provisioning-cloud-only-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 将用户从 Azure AD 写回到 SAP SuccessFactors
+      href: ../../../active-directory/saas-apps/sap-successfactors-writeback-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 将用户预配到 SAP Cloud Platform Identity Authentication 服务
+      href: ../../../active-directory/saas-apps/sap-cloud-platform-identity-authentication-provisioning-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Cloud Platform Identity Authentication 服务配置 SSO
       href: ../../../active-directory/saas-apps/sap-hana-cloud-platform-identity-authentication-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: 设置与 SAP Cloud Platform 配合使用的单一登录
+    - name: 向 SAP SuccessFactors 配置 SSO
+      href: ../../../active-directory/saas-apps/successfactors-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Analytics Cloud 配置 SSO
+      href: ../../../active-directory/saas-apps/sapboc-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Fiori 配置 SSO
+      href: ../../../active-directory/saas-apps/sap-fiori-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Qualtrics 配置 SSO
+      href: ../../../active-directory/saas-apps/qualtrics-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Ariba 配置 SSO
+      href: ../../../active-directory/saas-apps/ariba-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Concur Travel and Expense 配置 SSO
+      href: ../../../active-directory/saas-apps/concur-travel-and-expense-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Cloud Platform 配置 SSO
       href: ../../../active-directory/saas-apps/sap-hana-cloud-platform-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: AAD 与 SAP NetWeaver 集成
+    - name: 向 SAP NetWeaver 配置 SSO
       href: ../../../active-directory/saas-apps/sap-netweaver-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: AAD 与 SAP Business ByDesign 集成
+    - name: 向 SAP Business ByDesign 配置 SSO
       href: ../../../active-directory/saas-apps/sapbusinessbydesign-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: AAD 与 SAP HANA DBMS 集成
+    - name: 向 SAP HANA 配置 SSO
       href: ../../../active-directory/saas-apps/saphana-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
-    - name: 通过 Azure AD 执行的 SAP Fiori Launchpad SAML 单一登录
+    - name: 向 SAP Cloud for Customer 配置 SSO
+      href: ../../../active-directory/saas-apps/sap-customer-cloud-tutorial.md?toc=%2fazure%2fvirtual-machines%2fworkloads%2fsap%2ftoc.json
+    - name: 向 SAP Fiori 快速启动板配置 SSO
       href: 'https://blogs.sap.com/2017/02/20/your-s4hana-environment-part-7-fiori-launchpad-saml-single-sing-on-with-azure-ad'
 - name: 将 Azure 服务集成到 SAP 中
   items:
