--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -42,6 +42,8 @@
       href: vpn-gateway-about-point-to-site-routing.md
     - name: 关于可用性区域的区域冗余网关
       href: about-zone-redundant-vnet-gateways.md
+    - name: 内置安全控件
+      href: vpn-gateway-security-controls.md
     - name: 后端连接互操作性
       items:
         - name: 前言和测试设置
@@ -52,8 +54,6 @@
           href: ../networking/connectivty-interoperability-control-plane.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
         - name: 数据平面分析
           href: ../networking/connectivty-interoperability-data-plane.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
-    - name: 内置安全控件
-      href: vpn-gateway-security-controls.md
 - name: 操作指南
   items:
     - name: 创建和管理 VPN 网关
@@ -160,8 +160,8 @@
               href: vpn-gateway-howto-openvpn.md
             - name: 配置 OpenVPN 客户端
               href: vpn-gateway-howto-openvpn-clients.md
-        - name: 从 SSTP 转移到 OpenVPN 协议或 IKEv2
-          href: ikev2-openvpn-from-sstp.md
+            - name: 从 SSTP 转移到 OpenVPN 协议或 IKEv2
+              href: ikev2-openvpn-from-sstp.md
         - name: 为 P2S 转换到公共 CA 网关证书
           href: vpn-gateway-point-to-site-gateway-public-ca.md
         - name: 配置 Always On VPN 设备隧道
@@ -170,12 +170,6 @@
           href: vpn-gateway-howto-always-on-user-tunnel.md
         - name: 向 P2S 客户端播发自定义路由
           href: vpn-gateway-p2s-advertise-custom-routes.md
-    - name: 创建区域冗余网关
-      href: create-zone-redundant-vnet-gateway.md
-    - name: 在连接上配置 IPsec/IKE 策略
-      href: vpn-gateway-ipsecikepolicy-rm-powershell.md
-    - name: 配置主动-主动连接
-      href: vpn-gateway-activeactive-rm-powershell.md
     - name: 路由、BGP 和 VNet 对等互连
       items:
         - name: 为 VPN 网关配置 BGP
@@ -218,6 +212,18 @@
           href: vpn-gateway-howto-setup-alerts-virtual-network-gateway-log.md
     - name: 配置数据包捕获
       href: packet-capture.md
+    - name: 区域冗余网关
+      items:
+        - name: 创建区域冗余网关
+          href: create-zone-redundant-vnet-gateway.md
+    - name: 在连接上配置 IPsec/IKE 策略
+      items:
+        - name: PowerShell
+          href: vpn-gateway-ipsecikepolicy-rm-powershell.md
+    - name: 配置主动-主动连接
+      items:
+        - name: PowerShell
+          href: vpn-gateway-activeactive-rm-powershell.md
     - name: 疑难解答
       href: vpn-gateway-troubleshoot.md
       items:
