--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -83,7 +83,7 @@ groups:
   - id: programming-language-go
     title: Go
   - id: programming-language-javascript
-    title: JavaScript
+    title: Javascript
   - id: programming-language-python
     title: Python
   - id: programming-language-ruby
@@ -488,10 +488,18 @@ groups:
     title: Java
   - id: programming-language-python
     title: Python
+- id: aml-control-methods
+  title: Azure 机器学习控制平面
+  prompt: 选择 Azure 机器学习控制平面接口
+  pivots:
+  - id: py-sdk
+    title: Python SDK
+  - id: cli
+    title: Azure CLI
 metadata:
-  ms.openlocfilehash: ec7beebb81bf6a96912ff43a1e071f85d0d8a108
-  ms.sourcegitcommit: dccb85aed33d9251048024faf7ef23c94d695145
+  ms.openlocfilehash: a16cb06637b777259e4e5115beb1299e8ed65a6b
+  ms.sourcegitcommit: 8def3249f2c216d7b9d96b154eb096640221b6b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87291858"
+  ms.lasthandoff: 08/03/2020
+  ms.locfileid: "87543514"
