commit translated contents

--- a/articles/active-directory/governance/index.yml
+++ b/articles/active-directory/governance/index.yml
@@ -2,7 +2,7 @@
 title: Azure Active Directory Identity Governance 文档
 summary: 借助 Azure Active Directory (Azure AD) Identity Governance，能够保护、监视和审核对关键资产的访问，同时确保员工的工作效率。
 metadata:
-  author: msaburnley
+  author: ajburnle
   description: 了解如何保护、监视和审核对关键资产的访问，同时确保员工的工作效率。
   manager: daveba
   ms.author: ajburnle
@@ -12,12 +12,12 @@ metadata:
   ms.subservice: na
   ms.topic: landing-page
   services: active-directory
-  ms.openlocfilehash: 98b634b7aba20fc79e2bae15a5786aae4d1a0bd1
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 4bff55dbc2be4ae34ed9385bc41726919a5e86c4
+  ms.sourcegitcommit: fbb66a827e67440b9d05049decfb434257e56d2d
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "73173052"
+  ms.lasthandoff: 08/05/2020
+  ms.locfileid: "87798386"
 landingContent:
 - title: 关于 Identity Governance
   linkLists:
